<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDuelActivity">

    <TextView
        android:id="@+id/textViewAddDuelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_tv_category_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAddDuelOption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_tv_option1_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddDuelCategory" />

    <TextView
        android:id="@+id/textViewAddDuelOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_tv_option2_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddDuelOption1" />

    <EditText
        android:id="@+id/editTextAddDuelOption1"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAddDuelOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAddDuelOption1" />

    <EditText
        android:id="@+id/editTextAddDuelOption2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAddDuelOption2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAddDuelOption2" />

    <Spinner
        android:id="@+id/spinnerAddDuelCategory"
        android:layout_width="215dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/categories"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAddDuelCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/textViewAddDuelCategory"
        app:layout_constraintTop_toTopOf="@+id/textViewAddDuelCategory" />

    <Button
        android:id="@+id/buttonAddDuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_button_add_duel"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddDuelOption2"
        app:layout_constraintStart_toStartOf="@+id/editTextAddDuelOption2"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddDuelOption2" />
</android.support.constraint.ConstraintLayout>