<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">


    <ListView
        android:id="@+id/listViewStats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVotePercent1Title"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/textViewCategoryTitle"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stats_tv_category_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewOption1Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOption1Title"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stats_tv_option1_title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewCategoryTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVotePercent1Title"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="%"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewOption1Title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOption2Title"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stats_tv_option2_title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewVotePercent1Title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVotePercent2Title"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="%"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOption2Title"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>